--- a/ProgrEnh.html
+++ b/ProgrEnh.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="progrenh.css">
+    <!--<link rel="stylesheet" type="text/css" href="progrenh.css">
     <link rel="stylesheet" 
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-        crossorigin="anonymous">
+        crossorigin="anonymous"> -->
     <title>Document</title>
 </head>
 <body>
-    <h1>Est-ce un bien? Est-ce un mal? Je ne sais pas.</h1>
+    <header><h1>Est-ce un bien? Est-ce un mal? Je ne sais pas.</h1>
     <h2>11 mai 2016, Alexandre Gorius</h2>
 
     <blockquote cite="">
         Dans la nature, Bien & mal n’existent pas. 
         L'Univers lui-même n'est ni bon ni mauvais, mais un potentiel en développement permanent.
-    </blockquote>
+    </blockquote> </header>
 
     <h2>Dans la vie il y a 4 types de personnes.</h2>
     <ul>
@@ -74,6 +74,45 @@ Le quatrième jour, l’armée arrive au village à la recherche de nouvelles je
 Quand bien même, le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
 </p>
 
+<h3>En résumé, représentons ce dialogue sous forme de tableau</h3>
+
+<table>
+    <tr>
+        <th>Evènement</th>
+        <th>Bien ou Mal?</th>
+    </tr>
+
+    <tr>
+        <td>perdre son cheval</td>
+        <td>cela dépend</td>
+    </tr>
+
+    <tr>
+        <td>Gagner 7 chevaux</td>
+        <td>cela dépend</td>
+    </tr>
+
+    <tr>
+        <td>Le fils se blesse</td>
+        <td>cela dépend</td>
+    </tr>
+
+    <tr>
+        <td>Evite la guerre</td>
+        <td>cela dé<pend></pend></td>
+    </tr>
+
+    <p> Tableau représentant la philosophie du fermier<p>
+</table>
+
+    
+
+    <h2>Conclusion</h2>
+    <p> Le Bien et le Mal sont des valeurs culturelles et non naturelles. La banane est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...
+    </p>
 
 </body>
+
+<footer> Copyright Just Another Company 2017. Tous droits réservés. Très largement adapté de cet article: <a href="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263">Bien & mal n’existent pas, et c’est libérateur.</a>
+</p>
 </html>
