--- a/ProgrEnh.html
+++ b/ProgrEnh.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--<link rel="stylesheet" type="text/css" href="progrenh.css">
-    <link rel="stylesheet" 
+    <link rel="stylesheet" type="text/css" href="progrenh.css">
+    <!--<link rel="stylesheet" 
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
         crossorigin="anonymous"> -->
     <title>Document</title>
 </head>
 <body>
-    <header><h1>Est-ce un bien? Est-ce un mal? Je ne sais pas.</h1>
+    <header><h1>Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.</h1>
     <h2>11 mai 2016, Alexandre Gorius</h2>
 
     <blockquote cite="">
-        Dans la nature, Bien & mal n’existent pas. 
+        Dans la nature, <em class="bien">Bien</em> & <em class="mal">Mal</em> n’existent pas. 
         L'Univers lui-même n'est ni bon ni mauvais, mais un potentiel en développement permanent.
     </blockquote> </header>
 
-    <h2>Dans la vie il y a 4 types de personnes.</h2>
+    <h3>Dans la vie il y a 4 types de personnes.</h3>
     <ul>
-        <li>les gens qui pensent qu'Internet c'est le bien.</li>
-        <li>les gens qui pensent qu'Internet c'est le mal</li>
+        <li>les gens qui pensent qu'Internet c'est le <em class="bien">bien</em>.</li>
+        <li>les gens qui pensent qu'Internet c'est le <em class="mal">mal</em></li>
         <li>les gens qui pensent qu'Internet ce sont des chats</li>
         <li>les gens qui n'y pensent pas</li>
     </ul>
@@ -32,17 +32,17 @@
 
     <p>Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est comme cela doit être.
 
-Ici bas, la seule réalité qui soit est celle de notre conscience. Rien n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos sens ne transmettent pas le message. Cela signifie que si nous sentons mal quelque chose, notre réalité change. C’est chose possible car notre perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si nous pensons nos sensations d’une manière ou d’une autre, alors notre réalité change aussi en fonction de la manière. Ainsi, si nous pouvons autant changer notre réalité, alors rien n’est tangible.
+Ici bas, la seule réalité qui soit est celle de notre conscience. Rien n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos sens ne transmettent pas le message. Cela signifie que si nous sentons <em class="mal">mal</em> quelque chose, notre réalité change. C’est chose possible car notre perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si nous pensons nos sensations d’une manière ou d’une autre, alors notre réalité change aussi en fonction de la manière. Ainsi, si nous pouvons autant changer notre réalité, alors rien n’est tangible.
 
 Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez une vision quasi divine de cette personne. Sortez de son emprise, cette personne se révèle différente. Pourtant elle n’a pas changé, seulement vous avez changé d’état d’esprit. Tout fonctionne de cette manière : ce n’est pas seulement que vous pouvez activement façonner votre monde de cette manière, c’est que vous le faites passivement, quoi qu’il arrive.
 </p>
 
 <img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" alt="qu'en pensent t-il?'">
 
-<p>Le rocher sur Mars ne fait pas la différence entre bien et mal, car pour lui, ni l’un ni l’autre n’existent.
-Tout est relatif à un point de vue. Ainsi, il n’existe pas de bien ni de mal, car bien et mal sont des valeurs absolues. Si quelque chose est bon d’après quelqu’un et mal d’après quelqu’un d’autre, alors cette chose n’est en elle-même ni bonne, ni mal. Rappelez-vous : d’après ce rocher sur Mars, il n’y a pas de séparation entre bien et mal, les deux n’existent jute pas.
+<p>Le rocher sur Mars ne fait pas la différence entre <em class="bien">bien</em> et <em class="mal">mal</em>, car pour lui, ni l’un ni l’autre n’existent.
+Tout est relatif à un point de vue. Ainsi, il n’existe pas de <em class="bien">bien</em> ni de <em class="mal">mal</em>, car <em class="bien">bien</em> et <em class="mal">mal</em> sont des valeurs absolues. Si quelque chose est bon d’après quelqu’un et <em class="mal">mal</em> d’après quelqu’un d’autre, alors cette chose n’est en elle-même ni bonne, ni <em class="mal">mal</em>. Rappelez-vous : d’après ce rocher sur Mars, il n’y a pas de séparation entre <em class="bien">bien</em> et <em class="mal">mal</em>, les deux n’existent jute pas.
 
-	“Est-ce un bien? Est-ce un mal? Je ne sais pas.”
+	“Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”
 
 Une histoire chinoise célèbre illustre parfaitement ce propos.
 </p>
@@ -51,27 +51,27 @@ Une histoire chinoise célèbre illustre parfaitement ce propos.
 
 <p>C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui remonter le moral.
 
-“Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour cette perte, c’est si triste !”
+“Quelle <em class="mal">mal</em>chance ! Ton seul cheval ! Nous sommes vraiment désolé pour cette perte, c’est si triste !”
 
-Le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
+Le fermier répond, “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
 
 Le jour suivant, le cheval revient avec sept magnifiques juments. Les villageois reviennent pour célébrer la bonne nouvelle.
 
 “Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu dois être ravis de cette nouvelle !”
 
-Le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
+Le fermier répond, “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
 
 Le jour d’après, le fils du fermier s’occupe de l’entraînement des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les villageois reviennent.
 
-“Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra bientôt, c’est tellement dommage…”
+“Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra <em class="bien">bien</em>tôt, c’est tellement dommage…”
 
-Le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
+Le fermier répond, “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
 
 Le quatrième jour, l’armée arrive au village à la recherche de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement.
 
 “Quelle nouvelle incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est fantastique !”
 
-Quand bien même, le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sais pas.”.
+Quand <em class="bien">bien</em> même, le fermier répond, “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
 </p>
 
 <h3>En résumé, représentons ce dialogue sous forme de tableau</h3>
@@ -79,7 +79,7 @@ Quand bien même, le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sa
 <table>
     <tr>
         <th>Evènement</th>
-        <th>Bien ou Mal?</th>
+        <th><em class="bien">Bien</em> ou <em class="mal">Mal</em>?</th>
     </tr>
 
     <tr>
@@ -99,7 +99,7 @@ Quand bien même, le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sa
 
     <tr>
         <td>Evite la guerre</td>
-        <td>cela dé<pend></pend></td>
+        <td>cela dépend</td>
     </tr>
 
     <p> Tableau représentant la philosophie du fermier<p>
@@ -108,11 +108,12 @@ Quand bien même, le fermier répond, “Est-ce un bien? Est-ce un mal? Je ne sa
     
 
     <h2>Conclusion</h2>
-    <p> Le Bien et le Mal sont des valeurs culturelles et non naturelles. La banane est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...
+    <p> Le <em class="bien">Bien</em> et le <em class="mal">Mal</em> sont des valeurs culturelles et non naturelles. La banane est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...
     </p>
 
 </body>
 
-<footer> Copyright Just Another Company 2017. Tous droits réservés. Très largement adapté de cet article: <a href="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263">Bien & mal n’existent pas, et c’est libérateur.</a>
+<footer> Copyright Just Another Company 2017. Tous droits réservés. Très largement adapté de cet article: <a href="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263" target="_blank" title="Bien & mal n’existent pas, et c’est libérateur.
+"><em class="bien">Bien</em> & <em class="mal">mal</em> n’existent pas, et c’est libérateur.</a>
 </p>
 </html>
