--- a/ProgrEnh.html
+++ b/ProgrEnh.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,109 +12,120 @@
         crossorigin="anonymous"> -->
     <title>Document</title>
 </head>
+
 <body>
-    <header><h1>Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.</h1>
-    <h2>11 mai 2016, Alexandre Gorius</h2>
+    <div id="zen">
+        <img src="Zen.jpg" alt="Be cool">
+    </div>
+    <section>
+        <header>
+            <h1>Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.</h1>
+            <h2>11 mai 2016, Alexandre Gorius</h2>
 
-    <blockquote cite="">
-        Dans la nature, <em class="bien">Bien</em> & <em class="mal">Mal</em> n’existent pas. 
-        L'Univers lui-même n'est ni bon ni mauvais, mais un potentiel en développement permanent.
-    </blockquote> </header>
+            <blockquote cite="">
+                Dans la nature, <em class="bien">Bien</em> & <em class="mal">Mal</em> n’existent pas. L'Univers lui-même
+                n'est ni bon ni mauvais, mais un potentiel en développement permanent.
+            </blockquote>
+        </header>
 
-    <h3>Dans la vie il y a 4 types de personnes.</h3>
-    <ul>
-        <li>les gens qui pensent qu'Internet c'est le <em class="bien">bien</em>.</li>
-        <li>les gens qui pensent qu'Internet c'est le <em class="mal">mal</em></li>
-        <li>les gens qui pensent qu'Internet ce sont des chats</li>
-        <li>les gens qui n'y pensent pas</li>
-    </ul>
-    
-    <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="mec chelou"/>
+        <h3>Dans la vie il y a 4 types de personnes.</h3>
+        <ul>
+            <li>les gens qui pensent qu'Internet c'est le <em class="bien">bien</em>.</li>
+            <li>les gens qui pensent qu'Internet c'est le <em class="mal">mal</em></li>
+            <li>les gens qui pensent qu'Internet ce sont des chats</li>
+            <li>les gens qui n'y pensent pas</li>
+        </ul>
 
-    <p>Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est comme cela doit être.
+        <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="mec chelou" />
 
-Ici bas, la seule réalité qui soit est celle de notre conscience. Rien n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos sens ne transmettent pas le message. Cela signifie que si nous sentons <em class="mal">mal</em> quelque chose, notre réalité change. C’est chose possible car notre perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si nous pensons nos sensations d’une manière ou d’une autre, alors notre réalité change aussi en fonction de la manière. Ainsi, si nous pouvons autant changer notre réalité, alors rien n’est tangible.
+        <p>Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes. Là haut, ça n’a pas d’importance, il n'y
+            a aucun "problème", tout est comme cela doit être. Ici bas, la seule réalité qui soit est celle de notre conscience.
+            Rien n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos sens ne transmettent pas le message.
+            Cela signifie que si nous sentons <em class="mal">mal</em> quelque chose, notre réalité change. C’est chose possible
+            car notre perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si nous pensons nos sensations
+            d’une manière ou d’une autre, alors notre réalité change aussi en fonction de la manière. Ainsi, si nous pouvons
+            autant changer notre réalité, alors rien n’est tangible. Il y a des preuves à cela. Tombez amoureux de quelqu’un
+            et vous aurez une vision quasi divine de cette personne. Sortez de son emprise, cette personne se révèle différente.
+            Pourtant elle n’a pas changé, seulement vous avez changé d’état d’esprit. Tout fonctionne de cette manière :
+            ce n’est pas seulement que vous pouvez activement façonner votre monde de cette manière, c’est que vous le faites
+            passivement, quoi qu’il arrive.
+        </p>
 
-Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez une vision quasi divine de cette personne. Sortez de son emprise, cette personne se révèle différente. Pourtant elle n’a pas changé, seulement vous avez changé d’état d’esprit. Tout fonctionne de cette manière : ce n’est pas seulement que vous pouvez activement façonner votre monde de cette manière, c’est que vous le faites passivement, quoi qu’il arrive.
-</p>
+        <img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
+            alt="qu'en pensent t-il?'">
 
-<img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" alt="qu'en pensent t-il?'">
+        <p>Le rocher sur Mars ne fait pas la différence entre <em class="bien">bien</em> et <em class="mal">mal</em>, car pour
+            lui, ni l’un ni l’autre n’existent. Tout est relatif à un point de vue. Ainsi, il n’existe pas de <em class="bien">bien</em>            ni de <em class="mal">mal</em>, car <em class="bien">bien</em> et <em class="mal">mal</em> sont des valeurs absolues.
+            Si quelque chose est bon d’après quelqu’un et <em class="mal">mal</em> d’après quelqu’un d’autre, alors cette
+            chose n’est en elle-même ni bonne, ni <em class="mal">mal</em>. Rappelez-vous : d’après ce rocher sur Mars, il
+            n’y a pas de séparation entre <em class="bien">bien</em> et <em class="mal">mal</em>, les deux n’existent jute
+            pas. “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.” Une histoire
+            chinoise célèbre illustre parfaitement ce propos.
+        </p>
 
-<p>Le rocher sur Mars ne fait pas la différence entre <em class="bien">bien</em> et <em class="mal">mal</em>, car pour lui, ni l’un ni l’autre n’existent.
-Tout est relatif à un point de vue. Ainsi, il n’existe pas de <em class="bien">bien</em> ni de <em class="mal">mal</em>, car <em class="bien">bien</em> et <em class="mal">mal</em> sont des valeurs absolues. Si quelque chose est bon d’après quelqu’un et <em class="mal">mal</em> d’après quelqu’un d’autre, alors cette chose n’est en elle-même ni bonne, ni <em class="mal">mal</em>. Rappelez-vous : d’après ce rocher sur Mars, il n’y a pas de séparation entre <em class="bien">bien</em> et <em class="mal">mal</em>, les deux n’existent jute pas.
+        <img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg" alt="le vieux fermier chinois">
 
-	“Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”
+        <p>C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval s’enfuit. Les villageois s’ameutent à la
+            maison du fermier pour lui remonter le moral. “Quelle <em class="mal">mal</em>chance ! Ton seul cheval ! Nous
+            sommes vraiment désolé pour cette perte, c’est si triste !” Le fermier répond, “Est-ce un <em class="bien">bien</em>?
+            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”. Le jour suivant, le cheval revient avec sept magnifiques
+            juments. Les villageois reviennent pour célébrer la bonne nouvelle. “Quelle chance incroyable ! Avec huit chevaux,
+            tu es un homme riche ! Tu dois être ravis de cette nouvelle !” Le fermier répond, “Est-ce un <em class="bien">bien</em>?
+            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”. Le jour d’après, le fils du fermier s’occupe de l’entraînement
+            des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les
+            villageois reviennent. “Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en
+            remettra <em class="bien">bien</em>tôt, c’est tellement dommage…” Le fermier répond, “Est-ce un <em class="bien">bien</em>?
+            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”. Le quatrième jour, l’armée arrive au village à la recherche
+            de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement. “Quelle nouvelle
+            incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux,
+            c’est fantastique !” Quand <em class="bien">bien</em> même, le fermier répond, “Est-ce un <em class="bien">bien</em>?
+            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
+        </p>
 
-Une histoire chinoise célèbre illustre parfaitement ce propos.
-</p>
+        <h3>En résumé, représentons ce dialogue sous forme de tableau</h3>
 
-<img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg" alt="le vieux fermier chinois">
+        <table>
+            <tr>
+                <th>Evènement</th>
+                <th><em class="bien">Bien</em> ou <em class="mal">Mal</em>?</th>
+            </tr>
 
-<p>C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui remonter le moral.
+            <tr>
+                <td>perdre son cheval</td>
+                <td>cela dépend</td>
+            </tr>
 
-“Quelle <em class="mal">mal</em>chance ! Ton seul cheval ! Nous sommes vraiment désolé pour cette perte, c’est si triste !”
+            <tr>
+                <td>Gagner 7 chevaux</td>
+                <td>cela dépend</td>
+            </tr>
 
-Le fermier répond, “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
+            <tr>
+                <td>Le fils se blesse</td>
+                <td>cela dépend</td>
+            </tr>
 
-Le jour suivant, le cheval revient avec sept magnifiques juments. Les villageois reviennent pour célébrer la bonne nouvelle.
+            <tr>
+                <td>Evite la guerre</td>
+                <td>cela dépend</td>
+            </tr>
 
-“Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu dois être ravis de cette nouvelle !”
+            <p> Tableau représentant la philosophie du fermier
+                <p>
+        </table>
 
-Le fermier répond, “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
 
-Le jour d’après, le fils du fermier s’occupe de l’entraînement des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les villageois reviennent.
 
-“Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en remettra <em class="bien">bien</em>tôt, c’est tellement dommage…”
-
-Le fermier répond, “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
-
-Le quatrième jour, l’armée arrive au village à la recherche de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement.
-
-“Quelle nouvelle incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est fantastique !”
-
-Quand <em class="bien">bien</em> même, le fermier répond, “Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
-</p>
-
-<h3>En résumé, représentons ce dialogue sous forme de tableau</h3>
-
-<table>
-    <tr>
-        <th>Evènement</th>
-        <th><em class="bien">Bien</em> ou <em class="mal">Mal</em>?</th>
-    </tr>
-
-    <tr>
-        <td>perdre son cheval</td>
-        <td>cela dépend</td>
-    </tr>
-
-    <tr>
-        <td>Gagner 7 chevaux</td>
-        <td>cela dépend</td>
-    </tr>
-
-    <tr>
-        <td>Le fils se blesse</td>
-        <td>cela dépend</td>
-    </tr>
-
-    <tr>
-        <td>Evite la guerre</td>
-        <td>cela dépend</td>
-    </tr>
-
-    <p> Tableau représentant la philosophie du fermier<p>
-</table>
-
-    
-
-    <h2>Conclusion</h2>
-    <p> Le <em class="bien">Bien</em> et le <em class="mal">Mal</em> sont des valeurs culturelles et non naturelles. La banane est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...
-    </p>
+        <h2>Conclusion</h2>
+        <p> Le <em class="bien">Bien</em> et le <em class="mal">Mal</em> sont des valeurs culturelles et non naturelles. La banane
+            est bonne pour le singe, le singe n'est pas bon pour la banane. N'en faisons donc pas un fromage...
+        </p>
+    </section>
 
 </body>
 
-<footer> Copyright Just Another Company 2017. Tous droits réservés. Très largement adapté de cet article: <a href="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263" target="_blank" title="Bien & mal n’existent pas, et c’est libérateur.
-"><em class="bien">Bien</em> & <em class="mal">mal</em> n’existent pas, et c’est libérateur.</a>
-</p>
+<footer> Copyright Just Another Company 2017. Tous droits réservés. Très largement adapté de cet article: <a href="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263"
+        target="_blank" title="Bien & mal n’existent pas, et c’est libérateur.">Bien & mal n’existent pas, et c’est libérateur.</a>
+    </p>
+
 </html>
