--- a/ProgrEnh.html
+++ b/ProgrEnh.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="progrenh.css">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Metamorphous">
     <!--<link rel="stylesheet" 
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
@@ -14,9 +15,7 @@
 </head>
 
 <body>
-    <div id="zen">
-        <img src="Zen.jpg" alt="Be cool">
-    </div>
+
     <section>
         <header>
             <h1>Est-ce un <em class="bien">bien</em>? Est-ce un <em class="mal">mal</em>? Je ne sais pas.</h1>
@@ -30,9 +29,9 @@
 
         <h3>Dans la vie il y a 4 types de personnes.</h3>
         <ul>
-            <li>les gens qui pensent qu'Internet c'est le <em class="bien">bien</em>.</li>
-            <li>les gens qui pensent qu'Internet c'est le <em class="mal">mal</em></li>
-            <li>les gens qui pensent qu'Internet ce sont des chats</li>
+            <li id="one">les gens qui pensent qu'Internet c'est le <em class="bien">bien</em>.</li>
+            <li id="two">les gens qui pensent qu'Internet c'est le <em class="mal">mal</em></li>
+            <li id="three">les gens qui pensent qu'Internet ce sont des chats</li>
             <li>les gens qui n'y pensent pas</li>
         </ul>
 
