--- a/ProgrEnh.html
+++ b/ProgrEnh.html
@@ -65,20 +65,20 @@
         <img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg" alt="le vieux fermier chinois">
 
         <p>C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval s’enfuit. Les villageois s’ameutent à la
-            maison du fermier pour lui remonter le moral. “Quelle <em class="mal">mal</em>chance ! Ton seul cheval ! Nous
-            sommes vraiment désolé pour cette perte, c’est si triste !” Le fermier répond, “Est-ce un <em class="bien">bien</em>?
-            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”. Le jour suivant, le cheval revient avec sept magnifiques
-            juments. Les villageois reviennent pour célébrer la bonne nouvelle. “Quelle chance incroyable ! Avec huit chevaux,
-            tu es un homme riche ! Tu dois être ravis de cette nouvelle !” Le fermier répond, “Est-ce un <em class="bien">bien</em>?
-            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”. Le jour d’après, le fils du fermier s’occupe de l’entraînement
+            maison du fermier pour lui remonter le moral. <quote class="vill">“Quelle <em class="mal">mal</em>chance ! Ton seul cheval ! Nous
+            sommes vraiment désolé pour cette perte, c’est si triste !”</quote> Le fermier répond, <quote class="farm">“Est-ce un <em class="bien">bien</em>?
+            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”</quote>. Le jour suivant, le cheval revient avec sept magnifiques
+            juments. Les villageois reviennent pour célébrer la bonne nouvelle. <quote class="vill">“Quelle chance incroyable ! Avec huit chevaux,
+            tu es un homme riche ! Tu dois être ravis de cette nouvelle !”</quote> Le fermier répond, <quote class="farm">“Est-ce un <em class="bien">bien</em>?
+            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”</quote>. Le jour d’après, le fils du fermier s’occupe de l’entraînement
             des nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon tombe et se casse la jambe. Les
-            villageois reviennent. “Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en
-            remettra <em class="bien">bien</em>tôt, c’est tellement dommage…” Le fermier répond, “Est-ce un <em class="bien">bien</em>?
-            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”. Le quatrième jour, l’armée arrive au village à la recherche
-            de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement. “Quelle nouvelle
+            villageois reviennent. <quote class="vill">“Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous espérons qu’il s’en
+            remettra bientôt, c’est tellement dommage…”</quote> Le fermier répond, <quote class="farm">“Est-ce un <em class="bien">bien</em>?
+            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”</quote>. Le quatrième jour, l’armée arrive au village à la recherche
+            de nouvelles jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au recrutement. <quote class="vill">“Quelle nouvelle
             incroyable ! Ton fils échappera à cette guerre sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux,
-            c’est fantastique !” Quand <em class="bien">bien</em> même, le fermier répond, “Est-ce un <em class="bien">bien</em>?
-            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”.
+            c’est fantastique !”</quote> Quand <em class="bien">bien</em> même, le fermier répond, <quote class="farm">“Est-ce un <em class="bien">bien</em>?
+            Est-ce un <em class="mal">mal</em>? Je ne sais pas.”</quote>.
         </p>
 
         <h3>En résumé, représentons ce dialogue sous forme de tableau</h3>
